--- a/cyberquiz/package.json
+++ b/cyberquiz/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "db:seed": "node scripts/seed.mjs"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.9.5",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
